# ProstoYoga

./: .gitignore  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: Backend_CI.yml  backend.yml  backend_CI.yml  backend_testing.yml  black.yml  flake8.yml  mypy.yml
ProstoYoga/: main.py
ProstoYoga/database/: __init__.py  tables.py
backend/: config.py
backend/database/: __init__.py  create.py
backend/models/: models.py
database/: __init__.py  create.py  interfaces.py  models.py  setup.py
frontend/: registration.html
prostoyoga/: config.py  main.py
prostoyoga/backend/: .dockerignore  Dockerfile  pyproject.toml  test.py
prostoyoga/backend/src/: main.py  types.py
prostoyoga/backend/src/base_dao/: base_models.py  base_types.py  masters_dao.py  practices_dao.py  schedule_dao.py  users_dao.py
prostoyoga/backend/src/base_dao/base_models/: master.py  mixins.py  practice.py  schedule.py  subscription.py
prostoyoga/backend/src/registry/: abstract_registry.py  registry_config.py  registry_types.py
prostoyoga/backend/src/registry/mongo/: mongo_factory.py  mongo_registry.py
prostoyoga/backend/src/services/: mixins.py  types.py
prostoyoga/backend/src/services/masters/: masters_interfaces.py  models.py
prostoyoga/backend/src/services/practices/: models.py  practices_interfaces.py
prostoyoga/backend/src/services/schedule/: models.py  schedule_interfaces.py
prostoyoga/backend/src/services/subscriptions/: models.py  subscription_interfaces.py
prostoyoga/database/: __init__.py  create.py  (+2 more)
(+3 files in other folders)
