[tool.poetry]
name = "prostooga"
version = "0.1.0"
description = ""
authors = ["Eytes <yura.shamanov2000@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.96.0"}
sqlalchemy = "^2.0.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
